@@ -352,6 +352,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #6466: now distutils.cygwinccompiler and distutils.emxccompiler
+  uses the same refactored function to get gcc/ld/dllwrap versions numbers.
+  It's `distutils.util.get_compiler_versions`. Added deprecation warnings
+  for the obsolete get_versions() functions.
+
 - Issue #6433: fixed issues with multiprocessing.pool.map hanging on empty list
 
 - Issue #6314: logging: Extra checks on the "level" argument in more places.
